# dr_ref

./: .gitignore  README.md  hutchpp_algorithm_reference.md  plateau_detection_neural_networks.md  pyproject.toml  statistical_methods_reference.md
cluster/: CLUSTER_OVERVIEW.md  DOCUMENTATION_SUMMARY.md  DR_EXP_INTEGRATION.md  EXAMPLES.md  JOB_SUBMISSION_GUIDE.md  README.md  TROUBLESHOOTING.md  cluster_setup_checklist.md
docs/: DATA_ARTIFACTS.md  PROJECT_OVERVIEW.md  REPO_MAP.md  ROADMAP.md
docs/guides/: AGENT_GUIDE_by-tomorrow-app.md  AGENT_GUIDE_datadec.md  AGENT_GUIDE_datadec_notebooks.md  AGENT_GUIDE_ddpred.md  AGENT_GUIDE_dr_ingest.md  AGENT_GUIDE_dr_showntell.md  AGENT_GUIDE_dr_wandb.md
docs/processes/: CODING_PRINCIPLES.md  documentation_organizer_guide.md  fresh_eyes_review_guide.md  general_project_extraction_prompt.md  project_consolidation_methodology.md  strategic_collaboration_guide.md  tooling_stack_notes.md
guides/marimo/: agent_guide.md  marimo-reactivity-general.md
linting/: OLD_current_ruff_rules.md  OLD_ruff_rules_details.md  parallel_linting_position_paper.md  ruff_rules_explain.json  ruff_tiers.json
projects/integrate_drexp_deconcnn/: drexp_integration_OLD_GUIDE.md  drexp_integration_implementation_plan.md
projects/integrate_drexp_deconcnn/impl_plans/: drexp_integration_implementation_plan.md
projects/loss_lin_slope/impl_plans/: AGENT_IMPLEMENTATION_PROMPT.md  TEMP_tier3_critical_issues_remaining.md  backpack_feasibility_analysis.md  backpack_pyhessian_performance_comparison.md  h1_h2_implementation_breakdown.md  library_installation_status.md  phase_4_slurm_update.md  pyhessian_vs_backpack_comparison.md  tier1_2_optimized_implementation.md  tier3_prep_job_runs__impl_plan.md  tier4_analysis__impl_plan.md  tier4_analysis_implementation.md  tier_3_consolidated_updates.md  tier_3_critical_logging_requirements.md  tier_3_job_setup_implementation.md  tier_3_review_findings_temp.md  tier_3_tier_4_gap_analysis.md  tier_3_unified_implementation_plan.md  updated_library_strategy.md
projects/loss_lin_slope/impl_plans/completed/: tier1_2_optimized_implementation__RETROSPECTIVE.md
projects/loss_lin_slope/top_level_planning/: 2025.07.03_Meeting_Prep_Plan.md
projects/optim_dynamics_lt/: ResearchPlan_v1.md
python_package_refs/: exponential-fitting-reference.md  hessian_computation_libraries.md  mypy-reference.md  noise-floor-detection-reference.md  pydantic-reference.md  welch-method-reference.md
repos/dr_plotter/: reference_documentation_index.md  remaining_work_registry.md
repos/dr_plotter/methodologies/: audit_methodology.md  preset_system_guide.md
repos/dr_plotter/project_summaries/: 2024_09_07_datadec_dependency_removal.md  2025_08_28_architectural_enhancement.md  2025_08_28_faceted_plotting_implementation.md  2025_08_29_verification_system_consolidation.md  configuration_system_fixes.md  faceted_plotting_2025.md
scripts/: render_agent_index.py
src/dr_ref/: __init__.py
typing/: automated_typing_tools_research.md  autotyping-reference.md  infer-types-reference.md  monkeytype_reference.md  mypy-reference.md
